--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -1,4 +1,4 @@
-.poly-svg {
+.wrapper {
   margin-top: 2em;
 }
 .log-form {
@@ -24,6 +24,97 @@ a:hover {
   color: brown;
   display: show;
 }
-.initial {
-  display: none;
+
+.m-2 {
+  padding: 0.5em;
+  border: 1px solid rgb(121, 121, 241);
+}
+
+#warning-label {
+  color: brown;
+  font-style: italic;
+  font-size: 1.2em;
+}
+body {
+  background-color: #f1f1f1;
+  position: relative;
+}
+.btn-primary {
+  border-radius: 2px;
+}
+.loginContainer {
+  width: 700px;
+  background-color: white;
+  margin: auto;
+  position: relative;
+  margin-top: 100px;
+}
+label.control-label {
+  margin-bottom: 5px;
+  padding-left: 0;
+  color: #4d535f;
+  font-weight: bold;
+}
+.loginImg {
+  height: 100%;
+  width: 100%;
+  background-image: url("./bird600x400.png");
+  background-repeat: no-repeat;
+  transition: all 0.3s ease;
+}
+label.control-label {
+  margin-bottom: 5px;
+  padding-left: 0;
+  color: #4d535f;
+  font-size: 1.2em;
+  /* font-weight: bold; */
+}
+.titleDiv {
+  padding: 10px;
+  padding-left: 0px;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+.pagetitle {
+  transition: all 0.3s ease;
+  font-size: 28px;
+  font-weight: bold;
+  color: #0072c5;
+  display: inline-block;
+  margin-bottom: 0px !important;
+  padding-left: 6px;
+}
+.form-horizontal {
+  margin: auto;
+  padding: 10px;
+  padding-top: 21px;
+  background-color: white;
+}
+.form-control {
+  background-color: #edf2f6;
+  border-radius: 2px;
+  border: 1px solid #e0dfdf;
+  height: calc(1.95em + 0.95rem + 2px);
+  padding: 0.375rem 0.5rem;
+}
+
+@media (max-width: 768px) {
+  .loginContainer {
+    margin-top: 0% !important;
+    position: relative;
+    width: 90%;
+    top: 100px;
+    transform: inherit;
+    padding: 0px;
+    left: auto;
+  }
+  .loginImg {
+    width: 100%;
+    height: 70px;
+    background-position: center -60px;
+    background-size: cover;
+  }
+  .loginContainer a {
+    display: block;
+  }
 }
