--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -48,6 +48,7 @@ body {
   margin: auto;
   position: relative;
   margin-top: 100px;
+  padding: 1em;
 }
 label.control-label {
   margin-bottom: 5px;
