--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -98,7 +98,9 @@ label.control-label {
   height: calc(1.95em + 0.95rem + 2px);
   padding: 0.375rem 0.5rem;
 }
-
+.loginContainer {
+  margin-top: 1.1em;
+}
 @media (max-width: 768px) {
   .loginContainer {
     margin-top: 0% !important;
