some minor changes

--- a/client/src/components/Forgot/Forgot.css
+++ b/client/src/components/Forgot/Forgot.css
@@ -23,5 +23,12 @@ a:hover {
 }
 .display {
   display: show;
+  margin: 1em 6em;
   color: red;
+}
+.bottomlink {
+  margin: 2em 0;
+}
+.bottomlink a {
+  display: inline;
 }
